[gd_scene load_steps=15 format=3 uid="uid://c16yrhfywyo8k"]

[ext_resource type="Texture2D" uid="uid://caxd8kuvtoojj" path="res://Assets/GameObjects/GetMoving/get_moving.png" id="1"]
[ext_resource type="Script" path="res://Assets/GameObjects/GetMoving/GetMoving.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cq3engfnm76x6" path="res://Assets/Sounds/move_alert.wav" id="3"]

[sub_resource type="VisualShaderNodeColorFunc" id="VisualShaderNodeColorFunc_vs4nk"]
function = 1

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_hyo0a"]
input_name = "color"

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_xxg0r"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0.5, 0.5, 0.5)]
op_type = 3

[sub_resource type="VisualShaderNodeVectorFunc" id="VisualShaderNodeVectorFunc_i8bxq"]
default_input_values = [0, Vector2(0, 0)]
op_type = 0
function = 26

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_vsxuu"]
default_input_values = [0, 0.0, 1, 12.0]
operator = 2

[sub_resource type="VisualShaderNodeIntParameter" id="VisualShaderNodeIntParameter_ffuyu"]
parameter_name = "time_var"

[sub_resource type="VisualShader" id="8"]
code = "shader_type canvas_item;
uniform int time_var;



void fragment() {
// Input:3
	vec4 n_out3p0 = COLOR;


	vec3 n_out2p0;
// ColorFunc:2
	{
		vec3 c = vec3(n_out3p0.xyz);
		vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
		vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
		n_out2p0 = c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
	}


// IntParameter:8
	int n_out8p0 = time_var;


// FloatOp:7
	float n_in7p1 = 12.00000;
	float n_out7p0 = float(n_out8p0) * n_in7p1;


// VectorFunc:6
	vec2 n_out6p0 = sin(vec2(n_out7p0));


// Mix:5
	vec3 n_out5p0 = mix(n_out2p0, vec3(n_out3p0.xyz), vec3(n_out6p0, 0.0));


// Output:0
	COLOR.rgb = n_out5p0;


}
"
graph_offset = Vector2(-120.53, -210.936)
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(660, 100)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorFunc_vs4nk")
nodes/fragment/2/position = Vector2(440, -80)
nodes/fragment/3/node = SubResource("VisualShaderNodeInput_hyo0a")
nodes/fragment/3/position = Vector2(60, -100)
nodes/fragment/5/node = SubResource("VisualShaderNodeMix_xxg0r")
nodes/fragment/5/position = Vector2(447.14, 80.8562)
nodes/fragment/6/node = SubResource("VisualShaderNodeVectorFunc_i8bxq")
nodes/fragment/6/position = Vector2(300, 180)
nodes/fragment/7/node = SubResource("VisualShaderNodeFloatOp_vsxuu")
nodes/fragment/7/position = Vector2(260, 40)
nodes/fragment/8/node = SubResource("VisualShaderNodeIntParameter_ffuyu")
nodes/fragment/8/position = Vector2(-40, -20)
nodes/fragment/connections = PackedInt32Array(3, 0, 2, 0, 3, 0, 5, 1, 5, 0, 0, 0, 6, 0, 5, 2, 2, 0, 5, 0, 7, 0, 6, 0, 8, 0, 7, 0)

[sub_resource type="ShaderMaterial" id="9"]
shader = SubResource("8")
shader_parameter/time_var = null

[sub_resource type="Animation" id="10"]
resource_name = "active"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 2),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(-988.209, 48.2504), Vector2(-181.666, 48.2504), Vector2(-181.666, 48.2504)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("moving:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shaft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shaft:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("get:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-823.31, -112), Vector2(-377.635, -112), Vector2(-377.635, -112)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("get:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("get:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("moving:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("get:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 2),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6), Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("moving:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.6, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.800612, 0.800612), Vector2(0.6, 0.6), Vector2(0.800612, 0.800612)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "audio"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("AudioStreamPlayer")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3")
}],
"times": PackedFloat32Array(0)
}
tracks/11/use_blend = true
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("AudioStreamPlayer:volume_db")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-13.149]
}

[sub_resource type="Animation" id="11"]
resource_name = "inactive"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3j8h"]
_data = {
"active": SubResource("10"),
"inactive": SubResource("11")
}

[node name="GetMoving" type="CenterContainer"]
anchors_preset = -1
anchor_left = -0.516
anchor_top = -0.276
anchor_right = 0.5
anchor_bottom = 0.36
offset_left = 660.48
offset_top = 198.72
offset_right = -640.0
offset_bottom = -259.2
script = ExtResource("2")

[node name="shaft" type="Sprite2D" parent="."]
material = SubResource("9")
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(0, 279, 1276, 419)

[node name="get" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.674021)
position = Vector2(-472.352, -112)
scale = Vector2(0.784874, 0.784874)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(385, 0, 434, 160)

[node name="moving" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.505516)
position = Vector2(-685.355, 48.2504)
scale = Vector2(0.600949, 0.600949)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(101, 886, 1025, 194)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "inactive"
libraries = {
"": SubResource("AnimationLibrary_h3j8h")
}

[node name="AutohideTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -13.149

[connection signal="timeout" from="AutohideTimer" to="." method="_on_AutohideTimer_timeout"]
